# routes/api.php
@@ -28,4 +28,8 @@ Route::prefix('v1')->group(function () {
         Route::resource('attributes', 'AttributeController');
         Route::resource('attribute-category', 'AttributeCategoryController');
     });
+
+    Route::group(['middleware' => 'auth:sanctum', 'namespace' => 'Api\player'], function () {
+        Route::resource('players', 'PlayerController');
+    });
 });
